Source code updates

--- a/Ch02/02_01/finished/index.html
+++ b/Ch02/02_01/finished/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="React Js Lab course with Aj Zero Coding">
+    <meta name="keywords" content="React, Reactjs, React-js">
+    
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
     <title>React ⚛️</title>
+    <style>
+      h1{
+        color: red;
+      }
+      h2{
+        color:green;
+      }
+    </style>
   </head>
   <body>
       <div id="root"></div>
-      
+      <h2>React  with Aj Zero Coding</h2>
       <script type="text/javascript">
           ReactDOM.render(
               React.createElement("h1", null, "Getting Started!"),
