--- a/Ch02/02_02/finished/index.html
+++ b/Ch02/02_02/finished/index.html
@@ -14,12 +14,12 @@
   </head>
   <body>
     <div id="root"></div>
-
+    <h2 style="color:orangered">Welcome to React Lab with <span style="color:blue">Aj Zero Coding.</span></h2>
     <script type="text/javascript">
       let heading = React.createElement(
         "h1",
-        { style: { color: "blue" } },
-        "Heyyyy Everyone!"
+        { style: { color: "green" } },
+        "Hey Everyone!"
       );
 
       ReactDOM.render(
