--- a/Ch02/02_03/finished/index.html
+++ b/Ch02/02_03/finished/index.html
@@ -1,7 +1,9 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html> 
+<html lang="en"> 
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="keywords" content="react, reactjs, react basic course">
     <script
       src="https://unpkg.com/react@17/umd/react.development.js"
       crossorigin
@@ -13,8 +15,9 @@
     <title>React ⚛️</title>
   </head>
   <body>
+    <h2>Now, using imoji in React</h2>
     <div id="root"></div>
-
+    <h2>But imoji is not working</h2><!-- If you want to view image using babel-->
     <script type="text/javascript">
       ReactDOM.render(
         <ul>
