--- a/Ch02/02_04/finished/index.html
+++ b/Ch02/02_04/finished/index.html
@@ -8,8 +8,9 @@
     <title>React ⚛️</title>
   </head>
   <body>
+    <h2>Now, using imoji in React</h2>
       <div id="root"></div>
-      
+      <h2>Imoji is working</h2>
       <script type="text/babel">
         ReactDOM.render(
           <ul>
