--- a/Ch03/03_01/start/index.html
+++ b/Ch03/03_01/start/index.html
@@ -17,13 +17,13 @@
     <div id="root"></div>
 
     <script type="text/babel">
-      let robot = "🤖";
+      let robot = "🤖"; // we can initialize, diclear a variable, and put value in variable
       let cowboy = "🤠";
       let moon = "🌝";
       let name = "React";
       ReactDOM.render(
         <ul>
-          <li>{robot}</li>
+          <li>{robot}</li> 
           <li>{cowboy}</li>
           <li>{moon}</li>
           <li>{name.toUpperCase()}</li>
