--- a/Ch02/02_02/start/index.html
+++ b/Ch02/02_02/start/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta name="keywords" content="React, Reactjs, React-js">
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
     <title>React ⚛️</title>
